--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^4.4.0",
     "expo": "^35.0.0",
+    "expo-constants": "^7.0.0",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-maps": "^0.26.1",
     "react-native-web": "^0.11.7"
   },
   "devDependencies": {
