--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/netinfo": "^4.4.0",
     "expo": "^35.0.0",
     "expo-constants": "^7.0.0",
+    "expo-permissions": "^7.0.0",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-dom": "16.8.3",
